@@ -1081,6 +1081,15 @@ j=0;(for n=1 to 20 do (for d=1 to 20 do (if n!=(sum r in ColumnsOf(MacaulayRep(n
 MacaulayRep(27,3)						[6,4,1;3,2,1]
 MacaulayBound(27,3)						46
 MacaulayLowerOperator(27,3)					13
+(-8)^(1/3)							-2
+(-1/8)^(1/3)							-1/2
+(-2)^(1/3)							-1.25992104989
+(-8)^(-1/3)							-1/2
+(-1/8)^(-1/3)							-2
+(-2)^(-1/3)							-0.793700525984
+(-8)^(-2/3)							1/4
+(-1/8)^(-2/3)							4
+(-2)^(-2/3)							0.629960524947
 load "nullspacetest.gel"					true
 load "longtest.gel"						true
 load "testprec.gel"						true
