@@ -1,3 +1,10 @@
+Wed Dec 07 01:40:42 2011  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/mpwrap.c: fix roots of negative numbers when numerator of power
+	  is positive.  Also fix exact roots when power is negative.
+
+	* src/geniustests.txt: add tests for above
+
 Fri Nov 18 00:53:09 2011  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/symbolic.c: accept log instead of ln for natural log when doing
